--- a/static/app/main.html
+++ b/static/app/main.html
@@ -1,92 +1,83 @@
-
 <header class="main-header">
-  <!-- Logo -->
-  <a href="." class="logo">
-    <!-- mini logo for sidebar mini 50x50 pixels -->
-    <span class="logo-mini">o<b>Mkt</b>p</span>
-    <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg">open<b>Market</b>place</span>
-  </a>
-  <!-- Header Navbar: style can be found in header.less -->
-  <nav class="navbar navbar-static-top" role="navigation">
-    <!-- Sidebar toggle button-->
-    <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-      <span class="sr-only">Toggle navigation</span>
+    <!-- Logo -->
+    <a href="." class="logo">
+        <!-- mini logo for sidebar mini 50x50 pixels -->
+        <span class="logo-mini">o<b>M</b>p</span>
+        <!-- logo for regular state and mobile devices -->
+        <span class="logo-lg">open<b>Market</b>place</span>
     </a>
-    <div class="navbar-custom-menu">
-      <ul class="nav navbar-nav">
-
-        <!-- User Account: style can be found in dropdown.less -->
-        <li class="dropdown user user-menu">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img class="user-image" alt="User Image">
-            <span class="hidden-xs user-display-name"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <!-- User image -->
-            <li class="user-header">
-              <img class="img-circle user-image-lg" alt="User Image">
-              <p><span class="user-display-name"></span></p>
-            </li>
-            <!-- Menu Footer-->
-            <li class="user-footer">
-              <div class="pull-right">
-                <a href="https://mail.google.com/mail/u/0/?logout&hl=en" class="btn btn-default btn-flat">Sair</a>
-              </div>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <!-- Header Navbar: style can be found in header.less -->
+    <nav class="navbar navbar-static-top" role="navigation">
+        <!-- Sidebar toggle button-->
+        <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+            <span class="sr-only">Toggle navigation</span>
+        </a>
+        <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+                <!-- User Account: style can be found in dropdown.less -->
+                <li class="dropdown user user-menu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <img class="user-image" alt="User Image">
+                        <span class="hidden-xs user-display-name"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <!-- User image -->
+                        <li class="user-header">
+                            <img class="img-circle user-image-lg" alt="User Image">
+                            <p><span class="user-display-name"></span></p>
+                        </li>
+                        <!-- Menu Footer-->
+                        <li class="user-footer">
+                            <div class="pull-right">
+                                <a href="#" class="btn btn-danger btn-flat sign-out">Sair</a>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </header>
 <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar">
-  <!-- sidebar: style can be found in sidebar.less -->
-  <section class="sidebar">
-    <!-- Sidebar user panel -->
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img class="img-circle user-image-lg" alt="User Image">
-      </div>
-      <div class="pull-left info">
-        <p><span class="user-display-name"></span></p>
-      </div>
-    </div>
-
-    <!-- sidebar menu: : style can be found in sidebar.less -->
-    <ul class="sidebar-menu top-menu"></ul>
-
-  </section>
-  <!-- /.sidebar -->
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar">
+        <!-- Sidebar user panel -->
+        <div class="user-panel">
+            <div class="pull-left image">
+                <img class="img-circle user-image-lg" alt="User Image">
+            </div>
+            <div class="pull-left info">
+                <p><span class="user-display-name"></span></p>
+            </div>
+        </div>
+        <!-- sidebar menu: : style can be found in sidebar.less -->
+        <ul class="sidebar-menu top-menu"></ul>
+    </section>
+    <!-- /.sidebar -->
 </aside>
-
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-  <!-- Content Header (Page header) -->
-  <section class="content-header">
-    <h1>
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <h1>
       <i class="icon-title ion"></i>
       <span class="content-header-title"></span>
       <small class="content-header-title"></small>
     </h1>
-  </section>
-
-  <!-- Main content -->
-  <section class="content">
-
-
-  </section><!-- /.content -->
-</div><!-- /.content-wrapper -->
-
+    </section>
+    <!-- Main content -->
+    <section class="content">
+    </section>
+    <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
 <footer class="main-footer">
-  <div class="pull-right hidden-xs">
-    <b>Version</b> alpha
-  </div>
-  open<strong>Market</strong>place 
+    <div class="pull-right hidden-xs">
+        <b>Version</b> alpha
+    </div>
+    open<strong>Market</strong>place
 </footer>
-
 <!-- Add the sidebar's background. This div must be placed
      immediately after the control sidebar -->
 <div class="control-sidebar-bg"></div>
-
