--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Google sign in -->
     <meta name="google-signin-client_id" content="768767255656-cs88prcq2s6olvb4dhsjdf2r7br50uej.apps.googleusercontent.com">
-    <!-- pace loading page -->
+    <!-- loading page -->
     <script src="/js/plugins/pace.min.js"></script>
     <link rel="stylesheet" href="/css/plugins/pace.css" />
     <!-- Bootstrap 3.3.5 -->
