--- a/static/app/purchase/purchase.html
+++ b/static/app/purchase/purchase.html
@@ -124,7 +124,7 @@
 								<label id="cost-error" class="error" style="display: none;" for="cost">Custo por unidade é numérico e obrigatório!</label>
 			                </div>
 
-			                <div class="form-group">
+			                <div class="form-group required">
 			                  <label for="total_cost">Custo Total da Compra</label>
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
