Add tests cmds at README

--- a/static/app/purchase/purchase.html
+++ b/static/app/purchase/purchase.html
@@ -3,6 +3,7 @@
 	<ul class="nav nav-tabs">
 	  <li class="active"><a href="#tab_1" data-toggle="tab"><span class="fa fa-table"/> Lista de Compras</a></li>
 	  <li><a href="#tab_2" data-toggle="tab"><span class="fa fa-plus"/> Cadastro</a></li>
+      <li><a href="#tab_3" data-toggle="tab"><span class="ion ion-pie-graph"/> Relatórios</a></li>
 	</ul>
 	<div class="tab-content">
 	  <div class="tab-pane active" id="tab_1">
@@ -182,6 +183,15 @@
 	  	</form>
 
 	  </div><!-- /.tab-pane -->
+
+      <div class="tab-pane" id="tab_3">
+        <div class="box-body">
+
+
+
+        </div>
+      </div><!-- /.tab-pane -->
+
 	</div><!-- /.tab-content -->
 </div><!-- nav-tabs-custom -->
 
