--- a/static/index.html
+++ b/static/index.html
@@ -107,6 +107,8 @@
     <!-- Datepicker -->
     <link rel="stylesheet" href="/css/plugins/bootstrap-datepicker.min.css">
     <script async src="/js/plugins/bootstrap-datepicker.min.js"></script>
+    <!-- jQuery Serialize Object -->
+    <script async src="/js/plugins/jquery.number.min.js"></script>
     <!-- Moment -->
     <script async src="/js/plugins/moment.min.js"></script>
     <!-- jQuery Serialize Object -->
