--- a/static/app/customer/customer.html
+++ b/static/app/customer/customer.html
@@ -1,81 +1,75 @@
 <!-- Custom Tabs -->
 <div class="nav-tabs-custom">
-	<ul class="nav nav-tabs">
-	  <li class="active"><a href="#tab_1" data-toggle="tab"><span class="fa fa-table"/> <span class="tab_list"></span></a></li>
-	  <li><a href="#tab_2" data-toggle="tab"><span class="fa fa-plus"/> <span class="tab_save"></span></a></li>
-	</ul>
-	<div class="tab-content">
-	  <div class="tab-pane active" id="tab_1">
-		<div class="box-body">
-
-			<div class="progress progress-bar-table collapse">
-			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-			  </div>
-			</div>
-
-			<table class="table-customers"></table>	
-
-		</div>
-	  </div><!-- /.tab-pane -->
-	  <div class="tab-pane" id="tab_2">
-
-	  	<form class="customer-form">
-
-          <!-- general form elements -->
-          <div class="box box-primary">
-
-	        <!-- box-header -->
-            <div class="box-header with-border">
-              <h3 class="box-title customer_save_title"><small class="customer_save_subtitle"></small></h3>
-              <button type="button" class="btn btn-link pull-right new-item"><span class="fa fa-plus"/> <span class="new-item"></span></button>
-            </div><!-- /.box-header -->
-
-			<div class="progress progress-bar-form collapse">
-			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-			  </div>
-			</div>
-
-            <!-- form start -->
-            <form role="form">
-              <input type="text" name="id" style="display: none;" />
-
-              <div class="box-body">
-
-                <div class="form-group required">
-                  <label for="suppier" class="name"></label>
-                  <input type="text" class="form-control" name="name" />
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a href="#tab_1" data-toggle="tab"><span class="fa fa-table" /> <span class="tab_list"></span></a>
+        </li>
+        <li>
+            <a href="#tab_2" data-toggle="tab"><span class="fa fa-plus" /> <span class="tab_save"></span></a>
+        </li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="tab_1">
+            <div class="box-body">
+                <div class="progress progress-bar-table collapse">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                    </div>
                 </div>
-                
-                <div class="form-group">
-                  <label for="suppier" class="email"></label>
-                  <div class="input-group">
-                    <span class="input-group-addon">@</span>
-                    <input type="text" class="form-control" name="email" />
-                  </div>
-                  <label id="email-error" class="error" for="email"></label>
+                <table class="table-customers"></table>
+            </div>
+        </div>
+        <!-- /.tab-pane -->
+        <div class="tab-pane" id="tab_2">
+            <form class="customer-form">
+                <!-- general form elements -->
+                <div class="box box-primary">
+                    <!-- box-header -->
+                    <div class="box-header with-border">
+                        <h3 class="box-title customer_save_title"><small class="customer_save_subtitle"></small></h3>
+                        <button type="button" class="btn btn-link pull-right new-item"><span class="fa fa-plus" /> <span class="new-item"></span></button>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="progress progress-bar-form collapse">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                        </div>
+                    </div>
+                    <!-- form start -->
+                    <form role="form">
+                        <input type="text" name="id" style="display: none;" />
+                        <div class="box-body">
+                            <div class="form-group required">
+                                <label for="suppier" class="name"></label>
+                                <input type="text" class="form-control" name="name" />
+                            </div>
+                            <div class="form-group">
+                                <label for="suppier" class="email"></label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">@</span>
+                                    <input type="text" class="form-control" name="email" />
+                                </div>
+                                <label id="email-error" class="error" for="email"></label>
+                            </div>
+                            <div class="form-group">
+                                <label for="suppier" class="phone"></label>
+                                <input type="text" class="form-control" name="phone" />
+                            </div>
+                            <div class="form-group">
+                                <label for="suppier" class="location"></label>
+                                <input type="text" class="form-control" name="location" />
+                                <div class="map-canvas"></div>
+                            </div>
+                        </div>
+                        <!-- /.box-body -->
+                        <div class="box-footer">
+                            <button type="submit" class="btn btn-primary save"></button>
+                        </div>
+                    </form>
                 </div>
-
-                <div class="form-group">
-                  <label for="suppier" class="phone"></label>
-                  <input type="text" class="form-control" name="phone" />
-                </div>
-
-                <div class="form-group">
-                  <label for="suppier" class="location"></label>
-                  <input type="text" class="form-control" name="location" />
-				          <div class="map-canvas"></div>
-                </div>
-
-              </div><!-- /.box-body -->
-
-              <div class="box-footer">
-                <button type="submit" class="btn btn-primary save"></button>
-              </div>
+                <!-- /.box -->
             </form>
-          </div><!-- /.box -->	  		
-
-	  	</form>
-
-	  </div><!-- /.tab-pane -->
-	</div><!-- /.tab-content -->
-</div><!-- nav-tabs-custom -->
+        </div>
+        <!-- /.tab-pane -->
+    </div>
+    <!-- /.tab-content -->
+</div>
+<!-- nav-tabs-custom -->
