--- a/static/app/product/product.html
+++ b/static/app/product/product.html
@@ -1,69 +1,65 @@
 <!-- Custom Tabs -->
 <div class="nav-tabs-custom">
-	<ul class="nav nav-tabs">
-	  <li class="active"><a href="#tab_1" data-toggle="tab"><span class="fa fa-table"/> Lista de Produtos</a></li>
-	  <li><a href="#tab_2" data-toggle="tab"><span class="fa fa-plus"/> Cadastro</a></li>
-	</ul>
-	<div class="tab-content">
-	  <div class="tab-pane active" id="tab_1">
-		<div class="box-body">
-
-			<div class="progress progress-bar-table collapse">
-			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-			  </div>
-			</div>
-
-			<table class="table-products"></table>	
-
-		</div>
-	  </div><!-- /.tab-pane -->
-	  <div class="tab-pane" id="tab_2">
-
-	  	<form class="product-form">
-
-          <!-- general form elements -->
-          <div class="box box-primary">
-
-	        <!-- box-header -->
-            <div class="box-header with-border">
-              <h3 class="box-title">Dados do Produto <small>Informe os dados do produto</small></h3>
-            </div><!-- /.box-header -->
-
-			<div class="progress progress-bar-form collapse">
-			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-			  </div>
-			</div>
-
-            <!-- form start -->
-            <form role="form">
-              <input type="text" name="id" style="display: none;" />
-
-              <div class="box-body">
-
-                <div class="form-group required">
-                  <label for="suppier">Código</label>
-                  <input type="text" class="form-control" name="code" placeholder="Entre com o código do produto">
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a href="#tab_1" data-toggle="tab"><span class="fa fa-table" /> <span class="tab_list"></span></a>
+        </li>
+        <li>
+            <a href="#tab_2" data-toggle="tab"><span class="fa fa-plus" /> <span class="tab_save"></span></a>
+        </li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="tab_1">
+            <div class="box-body">
+                <div class="progress progress-bar-table collapse">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                    </div>
                 </div>
-                
-                <div class="form-group required">
-                  <label for="product">Nome</label>
-                  <input type="text" class="form-control" name="name" placeholder="Entre com o nome do produto">
+                <table class="table-products"></table>
+            </div>
+        </div>
+        <!-- /.tab-pane -->
+        <div class="tab-pane" id="tab_2">
+            <form class="product-form">
+                <!-- general form elements -->
+                <div class="box box-primary">
+                    <!-- box-header -->
+                    <div class="box-header with-border">
+                        <h3 class="box-title product_save_title"><small class="product_save_subtitle"></small></h3>
+                        <button type="button" class="btn btn-link pull-right new-item"><span class="fa fa-plus" /> <span class="new-item"></span></button>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="progress progress-bar-form collapse">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                        </div>
+                    </div>
+                    <!-- form start -->
+                    <form role="form">
+                        <input type="text" name="id" style="display: none;" />
+                        <div class="box-body">
+                            <div class="form-group required">
+                                <label for="suppier" class="code"></label>
+                                <input type="text" class="form-control" name="code">
+                            </div>
+                            <div class="form-group required">
+                                <label for="product" class="name"></label>
+                                <input type="text" class="form-control" name="name">
+                            </div>
+                        </div>
+                        <!-- /.box-body -->
+                        <div class="box-footer">
+                            <button type="submit" class="btn btn-primary save"></button>
+                        </div>
+                    </form>
                 </div>
-
-              </div><!-- /.box-body -->
-
-              <div class="box-footer">
-                <button type="submit" class="btn btn-primary">Salvar</button>
-              </div>
+                <!-- /.box -->
             </form>
-          </div><!-- /.box -->	  		
-
-	  	</form>
-
-	  </div><!-- /.tab-pane -->
-	</div><!-- /.tab-content -->
-</div><!-- nav-tabs-custom -->
-
-
-
-
+        </div>
+        <!-- /.box -->
+        </form>
+    </div>
+    <!-- /.tab-pane -->
+</div>
+<!-- /.tab-content -->
+</div>
+<!-- nav-tabs-custom -->
