--- a/static/app/sale/sale.html
+++ b/static/app/sale/sale.html
@@ -25,7 +25,7 @@
           <div class="box box-primary">
 
 	        <!-- box-header -->
-            <div class="box-header with-border">
+            <div class="box-header">
               <h3 class="box-title sale_save_title"><small class="sale_save_subtitle"></small></h3>
               <button type="button" class="btn btn-link pull-right new-item"><span class="fa fa-plus"/> <span class="new-item"></span></button>
             </div><!-- /.box-header -->
