--- a/static/app/dashboard/dashboard.html
+++ b/static/app/dashboard/dashboard.html
@@ -77,7 +77,7 @@
     </div>
 </div>
 <div class="box box-default">
-    <div class="box-header with-border">
+    <div class="box-header">
         <h3 class="box-title"><i class="fa fa-tag"></i> <span class="cash_flow_chart_title"></span> <small class="cash_flow_chart_subtitle"></small></h3>
         <!-- tools box -->
         <div class="pull-right box-tools">
