--- a/static/app/product/product.html
+++ b/static/app/product/product.html
@@ -24,7 +24,7 @@
                 <!-- general form elements -->
                 <div class="box box-primary">
                     <!-- box-header -->
-                    <div class="box-header with-border">
+                    <div class="box-header">
                         <h3 class="box-title product_save_title"><small class="product_save_subtitle"></small></h3>
                         <button type="button" class="btn btn-link pull-right new-item"><span class="fa fa-plus" /> <span class="new-item"></span></button>
                     </div>
