--- a/static/app/purchase/purchase.html
+++ b/static/app/purchase/purchase.html
@@ -3,7 +3,6 @@
 	<ul class="nav nav-tabs">
 	  <li class="active"><a href="#tab_1" data-toggle="tab"><span class="fa fa-table"/> Lista de Compras</a></li>
 	  <li><a href="#tab_2" data-toggle="tab"><span class="fa fa-plus"/> Cadastro</a></li>
-      <li><a href="#tab_3" data-toggle="tab"><span class="ion ion-pie-graph"/> Relatórios</a></li>
 	</ul>
 	<div class="tab-content">
 	  <div class="tab-pane active" id="tab_1">
@@ -57,7 +56,7 @@
 
                 	<div class="col-md-6">
 
-                		<div class="box-header box box-primary">
+                		<div class="box box-primary">
 
 							<div class="form-group required">
 			                  <label for="quantity">Quantidade</label>
@@ -114,7 +113,7 @@
                 	</div><!-- /.col-md-6 -->
 
                 	<div class="col-md-6">
-						<div class="box-header box box-primary">
+						<div class="box box-primary">
 
 			                <div class="form-group required">
 			                  <label for="cost">Custo por Unidade</label>
@@ -183,15 +182,6 @@
 	  	</form>
 
 	  </div><!-- /.tab-pane -->
-
-      <div class="tab-pane" id="tab_3">
-        <div class="box-body">
-
-
-
-        </div>
-      </div><!-- /.tab-pane -->
-
 	</div><!-- /.tab-content -->
 </div><!-- nav-tabs-custom -->
 
