--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,300,700" type="text/css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Date picker -->
+    <link rel="stylesheet" href="/css/plugins/bootstrap-datepicker.min.css">
+    <!-- Bootstrap table -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="/css/openmarketplace.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -82,8 +86,6 @@
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css">
     <!-- Latest compiled and minified JavaScript -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.js"></script>
     <!-- Latest compiled and minified Locales -->
@@ -105,7 +107,6 @@
     <!-- InputMask -->
     <script async src="/js/plugins/jquery.inputmask.min.js"></script>
     <!-- Datepicker -->
-    <link rel="stylesheet" href="/css/plugins/bootstrap-datepicker.min.css">
     <script async src="/js/plugins/bootstrap-datepicker.min.js"></script>
     <!-- jQuery Serialize Object -->
     <script async src="/js/plugins/jquery.number.min.js"></script>
