Translate commets to english

--- a/static/app/main.html
+++ b/static/app/main.html
@@ -56,6 +56,9 @@
     </section>
     <!-- /.sidebar -->
 </aside>
+<!-- Add the sidebar's background. This div must be placed
+   immediately after the control sidebar -->
+<div class="control-sidebar-bg"></div>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -73,10 +76,11 @@
 </div>
 <!-- /.content-wrapper -->
 <footer class="main-footer">
-    <div class="pull-right hidden-xs">
-        <b>Version</b> alpha
-    </div>
-    open<strong>Market</strong>place
+        <small>builded by salomax 2016</small>
+        <div>
+            <a href="https://github.com/salomax/openmarketplace" target="_blank"><i class="ion ion-social-github"></i></a>
+            <a href="https://br.linkedin.com/in/marcossalomao" target="_blank"><i class="ion ion-social-linkedin"></i></a>
+        </div>
 </footer>
 <!-- Add the sidebar's background. This div must be placed
      immediately after the control sidebar -->
