--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,8 @@
     <![endif]-->
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini background-city">
+    <div class="wrapper">
     <!-- General Modal -->
     <div class="modal modal-dialog-message">
         <div class="modal-dialog">
@@ -78,8 +79,8 @@
                 <a href="https://github.com/salomax/openMarketplace" target="_blank">View in Github <img src="/img/GitHub-Mark-Light-32px.png" /></a>
             </div>
         </footer>
-    </div>
-    <!-- /#wrapper -->
+    </div><!-- /#wrapper -->
+    </div><!-- ./wrapper -->
     <!-- jQuery 2.1.4 -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
@@ -119,6 +120,7 @@
     <script async defer src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <script async defer src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
     <!-- openmarketplace script -->
+    <script src="/js/vendor.min.js"></script>
     <script src="/js/openmarketplace.js"></script>
     <!-- Oauth control -->
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
