--- a/static/app/product/product.html
+++ b/static/app/product/product.html
@@ -9,7 +9,7 @@
         </li>
     </ul>
     <div class="tab-content">
-        <div class="tab-pane active" id="tab_1">
+        <div class="tab-pane active fade in" id="tab_1">
             <div class="box-body">
                 <div class="progress progress-bar-table collapse">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
@@ -19,7 +19,7 @@
             </div>
         </div>
         <!-- /.tab-pane -->
-        <div class="tab-pane" id="tab_2">
+        <div class="tab-pane fade in" id="tab_2">
             <form class="product-form">
                 <!-- general form elements -->
                 <div class="box box-primary">
