--- a/static/app/supplier/supplier.html
+++ b/static/app/supplier/supplier.html
@@ -5,7 +5,7 @@
 	  <li><a href="#tab_2" data-toggle="tab"><span class="fa fa-plus"/> <span class="tab_save"></span></a></li>
 	</ul>
 	<div class="tab-content">
-	  <div class="tab-pane active" id="tab_1">
+	  <div class="tab-pane active fade in" id="tab_1">
 		<div class="box-body">
 
 			<div class="progress progress-bar-table collapse">
@@ -17,7 +17,7 @@
 
 		</div>
 	  </div><!-- /.tab-pane -->
-	  <div class="tab-pane" id="tab_2">
+	  <div class="tab-pane fade" id="tab_2">
 
 	  	<form class="supplier-form">
 
