--- a/static/app/dashboard/dashboard.html
+++ b/static/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row fade in">
     <div class="col-lg-2 col-xs-4">
         <!-- small box -->
         <div class="small-box bg-green">
