--- a/static/app/main.html
+++ b/static/app/main.html
@@ -29,7 +29,7 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-right">
-                                <a href="#" class="btn btn-danger btn-flat sign-out">Sair</a>
+                                <a href="#" class="btn btn-danger btn-flat sign-out"></a>
                             </div>
                         </li>
                     </ul>
@@ -38,27 +38,6 @@
         </div>
     </nav>
 </header>
-<!-- Left side column. contains the logo and sidebar -->
-<aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-        <!-- Sidebar user panel -->
-        <div class="user-panel">
-            <div class="pull-left image">
-                <img class="img-circle user-image-lg" alt="User Image">
-            </div>
-            <div class="pull-left info">
-                <p><span class="user-display-name"></span></p>
-            </div>
-        </div>
-        <!-- sidebar menu: : style can be found in sidebar.less -->
-        <ul class="sidebar-menu top-menu"></ul>
-    </section>
-    <!-- /.sidebar -->
-</aside>
-<!-- Add the sidebar's background. This div must be placed
-   immediately after the control sidebar -->
-<div class="control-sidebar-bg"></div>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -82,6 +61,24 @@
             <a href="https://br.linkedin.com/in/marcossalomao" target="_blank"><i class="ion ion-social-linkedin"></i></a>
         </div>
 </footer>
+<!-- Left side column. contains the logo and sidebar -->
+<aside class="main-sidebar">
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar">
+        <!-- Sidebar user panel -->
+        <div class="user-panel">
+            <div class="pull-left image">
+                <img class="img-circle user-image-lg" alt="User Image">
+            </div>
+            <div class="pull-left info">
+                <p><span class="user-display-name"></span></p>
+            </div>
+        </div>
+        <!-- sidebar menu: : style can be found in sidebar.less -->
+        <ul class="sidebar-menu top-menu"></ul>
+    </section>
+    <!-- /.sidebar -->
+</aside>
 <!-- Add the sidebar's background. This div must be placed
      immediately after the control sidebar -->
 <div class="control-sidebar-bg"></div>
