--- a/static/app/sale/sale.html
+++ b/static/app/sale/sale.html
@@ -5,7 +5,7 @@
 	  <li><a href="#tab_2" data-toggle="tab"><span class="fa fa-plus"/> <span class="tab_save"></span></a></li>
 	</ul>
 	<div class="tab-content">
-	  <div class="tab-pane active" id="tab_1">
+	  <div class="tab-pane active fade in" id="tab_1">
 		<div class="box-body">
 
 			<div class="progress progress-bar-table collapse">
@@ -17,7 +17,7 @@
 
 		</div>
 	  </div><!-- /.tab-pane -->
-	  <div class="tab-pane" id="tab_2">
+	  <div class="tab-pane fade in" id="tab_2">
 
 	  	<form class="sale-form">
 
@@ -41,16 +41,19 @@
 
               <div class="box-body">
 
-			    <div class="form-group required">
-                  <label for="customer" class="customer"></label>
-                  <input type="text" name="customer[id]" style="display: none;" />
-                  <input type="text" class="form-control" name="customer[name]" />
+
+                <div class="form-group required">
+                    <label for="product" class="product"></label>
+                    <select class="product-select form-control" name="product[id]">
+                    </select>
+                    <label id="product-error" class="error" for="product[id]" style="display: none;"></label>
                 </div>
 
                 <div class="form-group required">
-                  <label for="product" class="product"></label>
-                  <input type="text" name="product[id]" style="display: none;" />
-                  <input type="text" class="form-control" name="product[name]" />
+                    <label for="customer" class="customer"></label>
+                    <select class="customer-select form-control" name="customer[id]">
+                    </select>
+                    <label id="customer-error" class="error" for="customer[id]" style="display: none;"></label>
                 </div>
 
                 <div class="row">
