--- a/static/index.html
+++ b/static/index.html
@@ -39,11 +39,9 @@
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
-    <div class="wrapper">
-
-
+    <div class="wrapper" style="display: none;">
         <!-- /.modal -->
-        <div id="wrapper" style="display: none;">
+        <div class="index-page">
             <div class="login-box">
                 <div class="login-logo">
                     <span>open<b>Market</b>place</span>
@@ -66,11 +64,9 @@
                 </div>
             </footer>
         </div>
-        <!-- /#wrapper -->
-
+        <!-- /index-page -->
     </div>
     <!-- ./wrapper -->
-
     <!-- jQuery 2.1.4 -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
@@ -121,12 +117,15 @@
             // not every request
             restartOnRequestAfter: false
         }
-    // Load page waiting message 
+        // Load page waiting message 
     $(window).load(function() {
-        $("#wrapper").fadeIn('slow', function() {
-            $.AdminLTE.pushMenu.activate($.AdminLTE.options.sidebarToggleSelector);
-            $.AdminLTE.layout.activate();
-        });
+        
+        // Overwrite pace height
+        $("body").height($(document).height());
+        
+        // Fade in wrapper
+        $(".wrapper").fadeIn('slow');
+
     });
     </script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
