--- a/static/app/customer/customer.html
+++ b/static/app/customer/customer.html
@@ -5,7 +5,7 @@
             <a href="#tab_1" data-toggle="tab"><span class="fa fa-table" /> <span class="tab_list"></span></a>
         </li>
         <li>
-            <a href="#tab_2" data-toggle="tab"><span class="fa fa-plus" /> <span class="tab_save"></span></a>
+            <a href="#tab_2" data-toggle="tab"><span class="glyphicon glyphicon-pencil" /> <span class="tab_save"></span></a>
         </li>
     </ul>
     <div class="tab-content">
