Fix endpoint host https://code.google.com/p/googleappengine/issues/detail?id=9384

--- a/static/app/main.html
+++ b/static/app/main.html
@@ -2,9 +2,9 @@
     <!-- Logo -->
     <a href="." class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini">o<b>M</b>p</span>
+        <span class="logo-mini">livre</span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg">open<b>Market</b>place</span>
+        <span class="logo-lg">livre<b>Market</b>place</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
@@ -23,7 +23,7 @@
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                            <img class="img-circle user-image-lg" alt="User Image">
+                            <img class="img-circle user-image-sidebar" alt="User Image">
                             <p><span class="user-display-name"></span></p>
                         </li>
                         <!-- Menu Footer-->
@@ -55,7 +55,7 @@
 </div>
 <!-- /.content-wrapper -->
 <footer class="main-footer">
-        <small>builded by salomax 2016</small>
+        <small>builded by salomax 2016</small> <small class="version-box-msg">v0.1.0-alpha</small>
         <div>
             <a href="https://github.com/salomax/livremarketplace" target="_blank"><i class="ion ion-social-github"></i></a>
             <a href="https://br.linkedin.com/in/marcossalomao" target="_blank"><i class="ion ion-social-linkedin"></i></a>
@@ -68,7 +68,7 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
             <div class="pull-left image">
-                <img class="img-circle user-image-lg" alt="User Image">
+                <img class="img-circle user-image-sidebar" alt="User Image">
             </div>
             <div class="pull-left info">
                 <p><span class="user-display-name"></span></p>
