--- a/static/app/sale/sale.html
+++ b/static/app/sale/sale.html
@@ -1,8 +1,8 @@
 <!-- Custom Tabs -->
 <div class="nav-tabs-custom">
 	<ul class="nav nav-tabs">
-	  <li class="active"><a href="#tab_1" data-toggle="tab"><span class="fa fa-table"/> <span class="tab_list"></span></a></li>
-	  <li><a href="#tab_2" data-toggle="tab"><span class="fa fa-plus"/> <span class="tab_save"></span></a></li>
+	  <li class="active"><a href="#tab_1" data-toggle="tab"><span class="fa fa-table"/> <span class="tab_list hidden-xs"></span></a></li>
+	  <li><a href="#tab_2" data-toggle="tab"><span class="glyphicon glyphicon-pencil"/> <span class="tab_save hidden-xs"></span></a></li>
 	</ul>
 	<div class="tab-content">
 	  <div class="tab-pane active fade in" id="tab_1">
