--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
 
 <body class="hold-transition skin-blue sidebar-mini">
     <!-- General Modal -->
-    <div class="modal modal-dialog-message">
+    <div class="modal fade right modal-dialog-message">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -60,10 +60,10 @@
         <div class="index-page">
             <div class="login-box">
                 <div class="login-logo">
-                    <span>open<b>Market</b>place</span>
+                    <span>livre<b>Market</b>place</span>
                 </div>
                 <div class="login-text">
-                    <small>OpenSource ERP</small>
+                    <small>Open source ERP</small>
                 </div>
                 <!-- /.login-logo -->
                 <div class="login-box-body">
