--- a/static/app/customer/customer.html
+++ b/static/app/customer/customer.html
@@ -2,10 +2,10 @@
 <div class="nav-tabs-custom">
     <ul class="nav nav-tabs">
         <li class="active">
-            <a href="#tab_1" data-toggle="tab"><span class="fa fa-table" /> <span class="tab_list"></span></a>
+            <a href="#tab_1" data-toggle="tab"><span class="fa fa-table" /> <span class="tab_list hidden-xs"></span></a>
         </li>
         <li>
-            <a href="#tab_2" data-toggle="tab"><span class="glyphicon glyphicon-pencil" /> <span class="tab_save"></span></a>
+            <a href="#tab_2" data-toggle="tab"><span class="glyphicon glyphicon-pencil" /> <span class="tab_save hidden-xs"></span></a>
         </li>
     </ul>
     <div class="tab-content">
